--- a/serverless-backend/layers/nodejs/package.json
+++ b/serverless-backend/layers/nodejs/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "jwt-simple": "^0.5.6"
+    "joi": "^17.4.0",
+    "jwt-simple": "^0.5.6",
+    "mongoose": "^5.11.15"
   }
 }
