--- a/forum/package.json
+++ b/forum/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rsuite": "^4.9.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
