--- a/serverless-backend/layers/nodejs/package.json
+++ b/serverless-backend/layers/nodejs/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "joi": "^17.4.0",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^5.11.15"
+    "lambda-api": "^0.10.7",
+    "monk": "^7.3.3"
   }
 }
