--- a/serverless-backend/template.yaml
+++ b/serverless-backend/template.yaml
@@ -10,7 +10,7 @@ Parameters:
     Type: String
     Default: 'mongodb+srv://<user>:<password>@<mongo-database>.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
     Description: (Required) Connection string for remote mongo DB database
-    MinLength: 90
+    MinLength: 70
     MaxLength: 120
     AllowedPattern: ^mongodb\+srv:\/\/.+:.+@.+\.mongodb.+$
     ConstraintDescription: 'Required. Must include user and password.'
@@ -26,7 +26,7 @@ Parameters:
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
-    Timeout: 10
+    Timeout: 15
     Runtime: nodejs14.x
     Handler: app.lambdaHandler
     Environment:
@@ -35,28 +35,40 @@ Globals:
                 JWT_SECRET: !Ref TokenSecret
 
 Resources:
-  SignUpFunction:
+  UserFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: lambdas/userHandlers/signup
+      CodeUri: handlers/user/
+      Handler: index.lambdaHandler
       Events:
-        HelloWorld:
+        SignUp:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /signup
             Method: post
-      Layers:
-            - !Ref SharedLibsLayer
-  LoginFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      CodeUri: lambdas/userHandlers/login
-      Events:
-        HelloWorld:
+        Login:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /login
             Method: post
+      Layers:
+            - !Ref SharedLibsLayer
+  PostFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: handlers/post/
+      Handler: index.lambdaHandler
+      Events:
+        NewPost:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /post
+            Method: post
+        GetPosts:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /posts
+            Method: get
       Layers:
             - !Ref SharedLibsLayer
   # Layers
@@ -75,12 +87,12 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  SignUpApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/signup/"
-  SignUpFunction:
-    Description: "SignUp Lambda Function ARN"
-    Value: !GetAtt SignUpFunction.Arn
-  SignUpFunctionIamRole:
+  Api:
+    Description: "API Gateway endpoint URL for Prod stage"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
+  UserFunction:
+    Description: "User Lambda Function ARN"
+    Value: !GetAtt UserFunction.Arn
+  UserFunctionIamRole:
     Description: "Implicit IAM Role created for SignUp function"
-    Value: !GetAtt SignUpFunctionRole.Arn
+    Value: !GetAtt UserFunctionRole.Arn
